--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="container">
-      <input name="number" placeholder="0" id="display">
+      <input name="number" placeholder="0" id="display" readonly>
       <div class="btn-container">
 
         <button onclick="clearDisplay();"class="btn">clr</button>
